Refactor USGS query API path and names
